tdf#103087 Border widget must not have focus initially

... unless it was opened using the keyboard.

Change-Id: I04675211ff043acf7757afed7252e7d7493eadad